manifests/system/longhorn/base/oauth2proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-ui
    app.kubernetes.io/name: longhorn
  name: longhorn-frontend-oauth
  namespace: longhorn
spec:
  ports:
  - name: https-web
    port: 4433
    protocol: TCP
    targetPort: oauth-http
  selector:
    app: oauth2-proxy
  type: ClusterIP


---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: 1.10.1
  name: oauth2-proxy
  namespace: longhorn
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: oauth2-proxy
  serviceName: longhorn-frontend-oauth
  template:
    metadata:
      labels:
        app: oauth2-proxy
        app.kubernetes.io/name: longhorn
        app.kubernetes.io/version: 1.10.1
    spec:
      affinity: null
      automountServiceAccountToken: false
      containers:
      - args:
        - --provider=oidc
        - --scope=openid email profile groups
        - --oidc-issuer-url=https://auth.laskonet.com
        - --redirect-url=https://longhorn.laskonet.com/oauth2/callback
        - --http-address=0.0.0.0:4433
        - --reverse-proxy=true
        - --cookie-secure=true
        - --cookie-domain=.laskonet.com
        - --email-domain=*
        - --insecure-oidc-allow-unverified-email=true
        - --upstream=http://longhorn-frontend:80
        - --request-logging=false
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.13.0
        name: oauth2-proxy
        ports:
        - containerPort: 4433
          name: oauth-http
          protocol: TCP
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: false
      priorityClassName: low-priority
      restartPolicy: Always
  updateStrategy:
    type: RollingUpdate


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn
spec:
  hostnames:
  - longhorn.laskonet.com
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  rules:
  - backendRefs:
    - kind: Service
      name: longhorn-frontend-oauth
      namespace: longhorn
      port: 4433
